still working on main

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 
 
         <main>
-            <div class="">
+            
+            <div class="container">
 
                 <!--section 1-->
-                <section class="first-section flex-container-sec-1">
+                <section class=" first-section flex-container-sec-1">
 
                     <div class="first-box-section-1">
                         
@@ -47,7 +48,7 @@
                 </section>
 
                 <!--section 2-->
-                <section class="second-section flex-container-sec-2">
+                <section class="container2 second-section flex-container-sec-2">
 
                     <div class="first-box-section-2">
 
